# FastPFor

./: .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  CMakeLists.txt.in  FastPFornew.cbp  FastPFornew.depend  README  README.md  appveyor.yml  example.cpp  makefile  rng00.c
.github/workflows/: macos-ci.yml  ubuntu-ci.yml  vs-ci.yml  vs17-arm-ci.yml
cmake_modules/: DetectCPUFeatures.cmake  Findsnappy.cmake  environment.cmake  googletest.cmake
headers/: VarIntG8IU.h  bitpacking.h  bitpackingaligned.h  bitpackinghelpers.h  bitpackingunaligned.h  bitpacksimd.h  blockpacking.h  codecfactory.h  codecs.h  common.h  compositecodec.h  cpubenchmark.h  csv.h  deltaio.h  deltautil.h  entropy.h  externalvector.h  fastpfor.h  horizontalbitpacking.h  maropuparser.h  memutil.h  mersenne.h  newpfor.h  optpfor.h  packingvectors.h  pfor.h  pfor2008.h  rolledbitpacking.h  simdbinarypacking.h  simdbitpacking.h  simdfastpfor.h  simdgroupsimple.h  simdnewpfor.h  simdoptpfor.h  simdpfor.h  simdvariablebyte.h  simple16.h  simple8b.h  simple8b_rle.h  simple9.h  (+11 more)
msvc/: FastPFor.sln  FastPFor.vcxproj  benchbitpacking.vcxproj  codecs.vcxproj  codecs.vcxproj.filters  csv2maropu.vcxproj  entropy.vcxproj  example.vcxproj  gapstats.vcxproj  getopt.h  getopt.vcxproj  inmemorybenchmark.vcxproj  inmemorybenchmark.vcxproj.filters  unit.vcxproj  unit.vcxproj.filters
msvc/getopt/: getopt.vcxproj  getopt.vcxproj.filters
src/: benchbitpacking.cpp  bitpacking.cpp  bitpackingaligned.cpp  bitpackingunaligned.cpp  bitpacksimd.cpp  codecfactory.cpp  codecs.cpp  csv2maropu.cpp  entropy.cpp  gapdecoder.cpp  gapencoder.cpp  gapstats.cpp  horizontalbitpacking.cpp  inmemorybenchmark.cpp  iotests.cpp  newbittest.cpp  partitionbylength.cpp  simdbitpacking.cpp  simdunalignedbitpacking.cpp  streamvbyte.c  unit.cpp  unrolledvsrolledbitpacking.cpp  varintdecode.c
unittest/: test_composite.cpp  test_driver.cpp  test_fastpfor.cpp  test_variablebyte.cpp
